Can now display duck images received.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,15 @@
         android:id="@+id/duckTestButton"
         android:text="RUN DUCK TEST"/>
 
+    <ImageView
+        android:id="@+id/duckView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:srcCompat="@tools:sample/avatars"
+
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
